| Summary: | ASTERISK-25365: Persistent subscriptions have extra Content-Length/corrupted messages | ||
| Reporter: | Mark Michelson (mmichelson) | Labels: | |
| Date Opened: | 2015-09-01 09:22:49 | Date Closed: | 2015-09-01 10:13:18 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Subscription persistence ends up adding an extra Content-Length header when saving to persistent storage. There also have been cases where packets have had some corruption to them. See the following examples:
{noformat} SUBSCRIBE sip:202@10.24.16.50:5060 SIP/2.0 Via: SIP/2.0/UDP 10.24.16.36:5060;received=10.24.16.36;branch=z9hG4bKPjIF1LBjUzdkZK89HJuhv7cvLj-WYvr4vb Max-Forwards: 70 From: "202" <sip:202@10.24.16.50>;tag=qw7bwHyMHpTlAty26Sgnb55gpuL60pKA To: <sip:202@10.24.16.50> Contact: "202" <sip:202@10.24.16.36:5060;ob> Call-ID: TYJGHSqy5-sOkE9ZXNXsx6b8K8YLc1Tl CSeq: 21393 SUBSCRIBE Event: presence Expires: 269 Supported: replaces, 100rel, timer, norefersub Accept: applfcation/pidf+xml, application/xpidf+xml Allow-Events: presence, message-summary, refer User-Agent: Digium D40 2_0_0_0_72910 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 {noformat} (Multiple Content-Length headers, Accept header is corrupted) {noformat} SUBSCRIBE sip:202@10.24.16.50:5060 SIP/2.0 Via: SIP/2.0/UDP 10.24.16.36:5060;received=10.24.16.36;branch=z9hG4bKPjlKJyxT.p8AFPvgcxPJ3FhQPi-NdDw5ry Max-Forwards: 70 From: "202" <sip:202@10.24.16.50>;tag=ONl3AOm5pI9hp0AqmDJUITBgWPEGEL3D To: <sip:202@10.24.16.50> Contact: "202" <sip:202@10.24.16.36:5060;ob> Call-ID: x49PiRzmKoh9f2gap3oT8PZodbnbPsNM CSeq: 6866 SUBSCRIBE Event: presence Expires: 95 Supported: eplacess, 10rrel, tmeer, noeferssub Accept: applcation/pidff+xml, appliation/xpiddf+xml Allo-Evvents: presence, message-summary, refer Usr-Ageent: Digium D0 2_0_00_0_72910 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 Content-Length: 0 {noformat} (All headers below Expires have corruption.) | ||
| Comments: | |||